--- a/assistant.glade
+++ b/assistant.glade
@@ -429,7 +429,7 @@ If not, the user should be able to correct. </property>
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="check_filter">
-                    <property name="label" translatable="yes">Specific Web sites </property>
+                    <property name="label" translatable="yes">Filtered Web access</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
@@ -448,8 +448,10 @@ If not, the user should be able to correct. </property>
                     <property name="can_focus">False</property>
                     <property name="halign">start</property>
                     <property name="margin_left">12</property>
-                    <property name="label" translatable="yes">This option includes the permissions necessary 
-for antivirus update</property>
+                    <property name="label" translatable="yes">This option gives access for email clients 
+running on the computer.
+It includes the permissions necessary 
+for antivirus update, but not for Webmail. </property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -472,7 +474,7 @@ of websites which you will define later. </property>
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="check_full">
-                    <property name="label" translatable="yes">Full internet access</property>
+                    <property name="label" translatable="yes">Full Web access</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
@@ -492,8 +494,7 @@ of websites which you will define later. </property>
                     <property name="halign">start</property>
                     <property name="margin_left">12</property>
                     <property name="label" translatable="yes">This option gives access to all Internet ressources
-without limitations. 
-Nevertheless, time conditions can be added later. </property>
+without limitations, e-mail, Web, etc.</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -658,48 +659,6 @@ Do you want to :</property>
       </packing>
     </child>
     <child>
-      <object class="GtkBox" id="box3">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
-        <child>
-          <object class="GtkLabel">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">
-Rules which have the attribute "any" (All) will be shown in blue. without a check box. 
-Once the user has chosen, go to the Users and Categories tab with the new user selected. 
-The chosen categories will appear in the summary, and it is possible to edit them with a right click. 
-</property>
-            <property name="wrap">True</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-      </object>
-      <packing>
-        <property name="page_type">progress</property>
-        <property name="title" translatable="yes">Web Access rules</property>
-        <property name="complete">True</property>
-        <property name="has_padding">False</property>
-      </packing>
-    </child>
-    <child>
       <object class="GtkBox" id="confirmation-page">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
@@ -762,141 +721,10 @@ et expliquer  la  suite. </property>
       <placeholder/>
     </child>
     <child>
-      <object class="GtkBox" id="firewall_permissions_old">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
-        <child>
-          <object class="GtkBox" id="content4">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="orientation">vertical</property>
-            <child>
-              <object class="GtkLabel" id="label9">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Choose the situation  which you want for this user</property>
-                <attributes>
-                  <attribute name="weight" value="bold"/>
-                </attributes>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">10</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="label10">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">He will have access to :</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkRadioButton" id="radio_nothing">
-                <property name="label" translatable="yes">Nothing at all. No email and no Web.</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="xalign">0</property>
-                <property name="draw_indicator">True</property>
-                <signal name="clicked" handler="ass_firewall_permissions" swapped="no"/>
-                <signal name="toggled" handler="ass_firewall_permissions" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">3</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkRadioButton" id="radio_email">
-                <property name="label" translatable="yes">Email only (this includes antivirus update)</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="xalign">0</property>
-                <property name="draw_indicator">True</property>
-                <property name="group">radio_nothing</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">3</property>
-                <property name="position">3</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkRadioButton" id="radio_webonly">
-                <property name="label" translatable="yes">Specific Web sites, but not to email </property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="xalign">0</property>
-                <property name="draw_indicator">True</property>
-                <property name="group">radio_nothing</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">3</property>
-                <property name="position">4</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkRadioButton" id="radio_filter">
-                <property name="label" translatable="yes">Email, and specific Web sites</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="xalign">0</property>
-                <property name="draw_indicator">True</property>
-                <property name="group">radio_nothing</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">3</property>
-                <property name="position">5</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkRadioButton" id="radio_full">
-                <property name="label" translatable="yes">Full internet access, Web and email. </property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="xalign">0</property>
-                <property name="draw_indicator">True</property>
-                <property name="group">radio_nothing</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">3</property>
-                <property name="position">6</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-      </object>
-      <packing>
-        <property name="title" translatable="yes">Category</property>
-        <property name="has_padding">False</property>
-      </packing>
+      <placeholder/>
+    </child>
+    <child>
+      <placeholder/>
     </child>
     <child>
       <placeholder/>
