--- a/assistant.glade
+++ b/assistant.glade
@@ -28,7 +28,13 @@
           <object class="GtkLabel" id="assistant_user_page1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">Assistant user page1</property>
+            <property name="label" translatable="yes">Cet assistant vous aidera à réaliser les tâches suivantes :
+
+- Créer un nouvel utilisateur
+- Ajouter une adresse mac à un utilisateur existant [futur]
+- Déplacer un utilisateur vers une catégorie différente [futur]
+- Expérimenter les permissions d'un utilisateur. [futur]
+</property>
             <property name="wrap">True</property>
             <attributes>
               <attribute name="size" value="12000"/>
@@ -582,15 +588,13 @@ Do you want to :</property>
           </packing>
         </child>
         <child>
-          <object class="GtkRadioButton" id="radio_specific_rule">
+          <object class="GtkCheckButton" id="check_specific_rule">
             <property name="label" translatable="yes">Create a specific access rule for him</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
-            <property name="xalign">0</property>
             <property name="draw_indicator">True</property>
-            <signal name="clicked" handler="ass_new_user_rules" swapped="no"/>
-            <signal name="toggled" handler="ass_new_user_rules" swapped="no"/>
+            <signal name="toggled" handler="ass_new_user_rules" after="yes" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -599,35 +603,18 @@ Do you want to :</property>
           </packing>
         </child>
         <child>
-          <object class="GtkRadioButton" id="radio_existent_rule">
-            <property name="label" translatable="yes">Join him to an existent rule</property>
+          <object class="GtkCheckButton" id="check_existent_rule">
+            <property name="label" translatable="yes">Join him to a existent rules</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
-            <property name="xalign">0</property>
-            <property name="active">True</property>
             <property name="draw_indicator">True</property>
-            <property name="group">radio_specific_rule</property>
+            <signal name="toggled" handler="ass_new_user_rules" after="yes" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="position">2</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkLabel" id="label13">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">  </property>
-            <attributes>
-              <attribute name="foreground" value="#cccc00000000"/>
-            </attributes>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">3</property>
           </packing>
         </child>
         <child>
@@ -649,6 +636,21 @@ Do you want to :</property>
             <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">4</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="label13">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">  </property>
+            <attributes>
+              <attribute name="foreground" value="#cccc00000000"/>
+            </attributes>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">5</property>
           </packing>
         </child>
       </object>
