--- a/idefix-config.glade
+++ b/idefix-config.glade
@@ -1327,7 +1327,7 @@
                           <object class="GtkToolButton" id="toolbutton1">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="tooltip_text" translatable="yes">Save configuration on the server</property>
+                            <property name="tooltip_text" translatable="yes">Assistant</property>
                             <property name="use_underline">True</property>
                             <property name="icon_widget">image3</property>
                             <signal name="clicked" handler="show_assistant" swapped="no"/>
@@ -1341,7 +1341,7 @@
                           <object class="GtkToggleToolButton" id="toolbutton3">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="tooltip_text" translatable="yes">Rename user or category</property>
+                            <property name="tooltip_text" translatable="yes">Expand or collapse the tree view</property>
                             <property name="label" translatable="yes">toolbutton3</property>
                             <property name="use_underline">True</property>
                             <property name="stock_id">gtk-indent</property>
@@ -1411,7 +1411,7 @@
                                   </object>
                                   <packing>
                                     <property name="left_attach">0</property>
-                                    <property name="top_attach">3</property>
+                                    <property name="top_attach">2</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1425,11 +1425,8 @@
                                   </object>
                                   <packing>
                                     <property name="left_attach">0</property>
-                                    <property name="top_attach">2</property>
+                                    <property name="top_attach">1</property>
                                   </packing>
-                                </child>
-                                <child>
-                                  <placeholder/>
                                 </child>
                               </object>
                             </child>
